jellyfin/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: regarde.mon.enorme.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: jellyfin, port: { name: http } }
  tls:
  # use default certificate
  - hosts:
    - '*.mon.enorme.uk'
